[package]
name = "nelson137-scratch"
version = "0.1.1"
edition = "2021"
description = "Scratch project for testing things"
documentation = "https://docs.rs/nelson137-scratch"
license = "MIT OR Apache-2.0"
keywords = ["test"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = "0.9.1"
